--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -26,7 +26,7 @@
 @copying
 This manual documents version @value{VERSION} of the GNU Astronomy
 Utilities, providing various individual tools with similar user
-interface for astronomical data manipulation and  analysis.
+interface for astronomical data manipulation and analysis.
 
 Copyright @copyright{} 2015 Free Software Foundation, Inc.
 
@@ -12189,7 +12189,7 @@ default Gnuastro will compile with the @option{-O3} optmization flag.
 @cindex Buffers (Emacs)
 @cindex Emacs buffers
 @item
-If possible, the text files should always be at most 80 characters
+If possible, the text files should always be at most 70 characters
 wide. Monitors today are certainly much wider, but with this limit,
 reading the functions becomes much more easier. Also for the
 developers, it allows multiple files (or multiple views of one file)
@@ -12202,7 +12202,7 @@ can use the fact that in C, two strings immediately after each other
 are concatenated, for example @code{"The first part, " "and the second
 part."} Note the space character in the end of the first part. Since
 they are now separated, you can easily break a long literal string
-into several lines and adhere to the maximum 80 character line length
+into several lines and adhere to the maximum 70 character line length
 policy.
 
 @cindex Header file
@@ -12286,14 +12286,24 @@ very important for easily understanding the code.
 
 @end itemize
 
-Emacs is an extensible and easily customizable text editor.  Among its countless
-features, it allows specification of certain settings that are applied to a
-single file or to all files in a directory and its subdirectories.  In order to
-harmonize code coming from different contributors, a @file{.dir-locals.el} file
-automatically sets for Emacs some of above coding conventions in all source
-files part of Gnuastro, for more information see that file in Gnuastro top
-directory.  Thus, users of this text editor can readily start hacking Gnuastro
-source code.
+@cartouche
+@cindex GNU Emacs
+@strong{Recommended text editor:} GNU Emacs is an extensible and
+easily customizable text editor which many programmers rely on for
+developing due to its countless features. Among them, it allows
+specification of certain settings that are applied to a single file or
+to all files in a directory and its subdirectories. In order to
+harmonize code coming from different contributors, Gnuastro ships with
+a @file{.dir-locals.el} file which automatically configures Emacs to
+satisfy the coding conventions above when you are using it within
+Gnuastro's directories. Thus, Emacs users can readily start hacking
+into Gnuastro. If you are new to developing, we strongly recommend
+it. Emacs also has a great and very complete manual
+(@url{https://www.gnu.org/software/emacs/manual/emacs.html}) which is
+being continually improved for over 30 years and is the best starting
+point to learn it. Emacs was the first project released by GNU and is
+still one of its flagship projects.
+@end cartouch
 
 @node Multithreaded programming, Documentation, Coding conventions, Program source
 @subsection Multithreaded programming
