Make the documentation actually build
Properly escape a brace in math equation.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -12002,7 +12002,7 @@ as:
 
 @cindex Poisson distribution
 @dispmath{f(k)={\lambda^k \over k!} e^{-\lambda},\quad k\in \{0, 1, 2,
-3, \dots }}
+3, \dots \}}
 
 @cindex Skewed Poisson distribution
 Because the Poisson distribution is only applicable to positive
