--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -3876,7 +3876,7 @@ should remove it.
 
 @item Make
 Make is a utility built for specifying ``targets'', ``prerequisites''
-and ``receipts''. It allows you to define very complicated dependancy
+and ``recipes''. It allows you to define very complicated dependancy
 structures for complicated processes that commonly start off with a
 large list of inputs and builds them based on the dependancies you
 define. GNU Make@footnote{@url{https://www.gnu.org/software/make/}} is
