Book: Corrected Poisson equation curly braces
The curley braces within a math equation in Texinfo are only output in
PDF when a `@' is placed before them.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -11983,8 +11983,8 @@ count. The probability density function of @mymath{k} can be written
 as:
 
 @cindex Poisson distribution
-@dispmath{f(k)={\lambda^k \over k!} e^{-\lambda},\quad k\in \{0, 1, 2,
-3, \dots \}}
+@dispmath{f(k)={\lambda^k \over k!} e^{-\lambda},\quad k\in @{0, 1, 2,
+3, \dots @}}
 
 @cindex Skewed Poisson distribution
 Because the Poisson distribution is only applicable to positive
